--- a/serialization-wip/README
+++ b/serialization-wip/README
@@ -32,7 +32,7 @@ From a standing start, as checked out from Git, follow the yellow brick road:
     make
 
     # Compile the unit-test program.
-    make tjunit
+    make unittest
 
     # Build everything necessary, and run the unit tests.
     make test
@@ -71,15 +71,6 @@ test process.  The most important files are:
 	is run on some of the .go files in this directory, to generate
 	corresponding C header and code files.
 
-    serialization-wip/gotocjson/config.go
-        a stable copy of the TNG config.go file, here to insulate
-	against random changes in the real copy until I've worked out
-	how to handle all features we need to support
-
-    serialization-wip/gotocjson/enum.go
-	used for testing the Go-language parsing, but not part of the
-	ultimate deliverable
-
     serialization-wip/gotocjson/gotocjson.go
 	The Go-to-C conversion tool.  For development/test purposes,
 	this is built and invoked via the sibling Makefile.
@@ -103,33 +94,52 @@ test process.  The most important files are:
 	and a .c file, containing both enumeration values represented
 	as strings and the generated conversion functions.
 
+    serialization-wip/gotocjson/convert_go_to_c.h
+    serialization-wip/gotocjson/convert_go_to_c.c
+	These files contain code that is needed for conversion of C
+	data structures to and from JSON, but that is not specific
+	to the particular Go-package code that is being targeted.
+	The common parts have been factored out into these files
+	so it can be represented only once in a compiled application.
+
+    serialization-wip/gotocjson/c.c
+    serialization-wip/gotocjson/m.c
+    serialization-wip/gotocjson/t.c
+	These files are the manually-edited C code that I am using to
+	work out all the details of exactly how the final generated
+	C code should look, operate, and handle errors.  Essentially,
+	this is a playpen where I can experiment.  That is absolutely
+	necessary, because it's quite hard to see what code needs to
+	be generated until you have a chance to test it in practice.
+	In the final version, these files will be replaced with the
+	generated config.c, milliseconds.c, and transit.c files that
+	will have full coverage of all the packages, enumerations,
+	data structures, and encode/decode routines that we need.
+
+    serialization-wip/gotocjson/config.go
+        a stable copy of the TNG config.go file, here to insulate
+	against random changes in the real copy until I've worked out
+	how to handle all features we need to support
+
     serialization-wip/gotocjson/milliseconds.go
         a stable copy of the TNG milliseconds.go file, here to insulate
 	against random changes in the real copy until I've worked out
 	how to handle all features we need to support
 
-    serialization-wip/gotocjson/tj.c
-	This is the manually-edited C code that I am using to work out all
-	the details of exactly how the final generated C code should look,
-	operate, and handle errors.  Essentially, this is a playpen where
-	I can experiment.  That is absolutely necessary, because it's
-	quite hard to see what code needs to be generated until you have
-	a chance to test it in practice.  In the final version, this file
-	will be replaced with the generated config.c, milliseconds.c, and
-	transit.c files that will have full coverage of all the packages,
-	enumerations, data structures, and encode/decode routines that
-	we need.
+    serialization-wip/gotocjson/transit.go
+        a stable copy of the TNG transit.go file, here to insulate
+	against random changes in the real copy until I've worked out
+	how to handle all features we need to support
 
-    serialization-wip/gotocjson/tjunit.c
+    serialization-wip/gotocjson/unittest.c
 	This is the basic unit-test program.  It contains a few large
 	JSON strings that we decode into C structures, then encode those
 	back into JSON and compare against the original JSON strings to
 	verify that we get back exactly what we started with.
 
-    serialization-wip/gotocjson/transit.go
-        a stable copy of the TNG transit.go file, here to insulate
-	against random changes in the real copy until I've worked out
-	how to handle all features we need to support
+    serialization-wip/gotocjson/enum.go
+	used for testing the Go-language parsing, but not part of the
+	ultimate deliverable
 
 Some of the other files represent older development code that I am
 presently still keeping around for reference as replacement code is
@@ -143,18 +153,22 @@ Current limitations:
     of JSON strings in the generated C code.  That will take a later
     iteration of development.
 
-    One issue with the current playpen code is that when parsing JSON
-    into C structures, we encounter strings that end up being reference
-    by the C structures.  However, those strings will disappear when we
-    destroy the JSON (Jansson) objects that contain them after parsing
-    the incoming JSON string.  For that reason, at the moment we have
-    some json_decref(json); calls commented out.  We will either need
-    to strdup() such strings to sidestep such aliasing, or modify
-    the decoding API to also return the relevant JSON objects so their
-    lifetime can be controlled by the calling application rather than just
-    the conversion routines.  That is an improvement still in the wings.
+    One issue with the current playpen code is that when parsing
+    JSON into C structures, we encounter strings that end up being
+    referenced by the C structures.  However, those strings will
+    disappear when we destroy the JSON (Jansson) objects that contain
+    them after parsing the incoming JSON string.  For that reason, at
+    the moment we have some json_decref(json); calls commented out.
+    We will either need to strdup() such strings when assigning them
+    to C structures to sidestep such aliasing, or modify the decoding
+    API to also return the relevant JSON objects so their lifetime
+    can be controlled by the calling application rather than just the
+    conversion routines.  That is an improvement still in the wings.
 
     I am still working on the playpen code to convert lists of items,
     in either direction.  This is somewhat complicated by the use of
     pointers in certain places in the Go structures.
+
+    Specific details on other issues and further code improvements
+    are documented in the TASKS file.
 
